# kuka_kr210-pick-place

./: README.md
Robotiq-grippers/robotiq_2f_85_description/urdf/: robotiq_2F_85.xacro  robotiq_arg2f_85_model_macro.xacro
kuka_experimental/kuka_experimental/: package.xml
kuka_kr210/kr210_description/: CMakeLists.txt  package.xml
kuka_kr210/kr210_description/meshes/boxes/: box.stl
kuka_kr210/kr210_description/urdf/: kr210l150_macro.xacro
kuka_kr210/kr210_gazebo/: CMakeLists.txt  package.xml
kuka_kr210/kr210_gazebo/launch/: kr210_control.launch  kr210_gazebo.launch  load_kr210.launch  spawn_kr210.launch
kuka_kr210/kr210_gazebo/urdf/: blue_cube.urdf  box.xacro  box_blue.urdf  box_green.urdf  box_red.urdf  camera.xacro  camera_arm.xacro  conveyor.xacro  gazebo.xacro  gazebo_2f.xacro  gazebo_transmission.xacro  green_cube.urdf  kr210_main.xacro  red_cube.urdf  transmission_2f.xacro
kuka_kr210/kr210_gazebo/urdf/boxes/: box_blue.urdf  box_green.urdf  box_red.urdf
kuka_kr210/kr210_gazebo/urdf/resources/: floor.xacro  materials.xacro  pallet.xacro  table.xacro  wall.xacro
kuka_kr210/kr210_master/: CMakeLists.txt  package.xml
kuka_kr210/kr210_master/launch/: mov_pick_place.launch
kuka_kr210/kr210_master/msg/: DetectColor.msg
kuka_kr210/kr210_master/src/: detect_colors.py  graphics_joints.py  mov_boxes.py  pick_and_place.py  pick_and_place_v2.py
kuka_kr210/kr210_moveit/: CMakeLists.txt  package.xml
kuka_kr210/kr210_moveit/kuka_2f_cam_moveit/: .setup_assistant  package.xml
kuka_kr210/kr210_moveit/kuka_arm_2f_moveit/: .setup_assistant  package.xml
(+13 files in other folders)
